build overflow bug fix

--- a/src/Editor/styles.css
+++ b/src/Editor/styles.css
@@ -58,6 +58,11 @@ h1 {
 }
 
 .editor-inner {
+  max-height: 600px;
+  overflow-y: auto;
+}
+
+.viewer-inner {
   background: #fff;
   position: relative;
 }
